src/generated/parser.mjs
// @generated by Peggy 4.2.0.
//
// https://peggyjs.org/


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Formula: peg$parseFormula };
  var peg$startRuleFunction = peg$parseFormula;

  var peg$c0 = "crystal";
  var peg$c1 = "[";
  var peg$c2 = "]";
  var peg$c3 = "(";
  var peg$c4 = ")";
  var peg$c5 = "{";
  var peg$c6 = "}";
  var peg$c7 = "spectrum";
  var peg$c8 = "calc";
  var peg$c9 = "zmatrix";
  var peg$c10 = "mechanism";
  var peg$c11 = "@meta(\"";
  var peg$c12 = "\",\"";
  var peg$c13 = "\")";
  var peg$c14 = "@";
  var peg$c15 = "(\"";
  var peg$c16 = "name";
  var peg$c17 = "title";
  var peg$c18 = "formula";
  var peg$c19 = "label";
  var peg$c20 = "inchi";
  var peg$c21 = "smiles";
  var peg$c22 = "cas";
  var peg$c23 = "iupac";
  var peg$c24 = "cid";
  var peg$c25 = "chebi";
  var peg$c26 = "+";
  var peg$c27 = "<=>";
  var peg$c28 = "<->";
  var peg$c29 = "->";
  var peg$c30 = "<-";
  var peg$c31 = "-";
  var peg$c32 = "alpha";
  var peg$c33 = "beta";
  var peg$c34 = "H";
  var peg$c35 = "_";
  var peg$c36 = "##";
  var peg$c37 = ">-";
  var peg$c38 = "-<";
  var peg$c39 = "~>";
  var peg$c40 = "~~";
  var peg$c41 = "#";
  var peg$c42 = "=";
  var peg$c43 = "@m(";
  var peg$c44 = "@t(\"";
  var peg$c45 = "@(";
  var peg$c46 = ",";
  var peg$c47 = "@f(";
  var peg$c48 = ".";
  var peg$c49 = ":";
  var peg$c50 = "^";
  var peg$c51 = "\"";
  var peg$c52 = "`";

  var peg$r0 = /^[^\]]/;
  var peg$r1 = /^[^)]/;
  var peg$r2 = /^[^}]/;
  var peg$r3 = /^[^"]/;
  var peg$r4 = /^[a-z]/;
  var peg$r5 = /^[ER-SZa-b\u03B1-\u03B2]/;
  var peg$r6 = /^[0-9]/;
  var peg$r7 = /^[A-Z]/;
  var peg$r8 = /^[([{]/;
  var peg$r9 = /^[RS]/;
  var peg$r10 = /^[\^-_]/;
  var peg$r11 = /^[+\-]/;
  var peg$r12 = /^[IVXLCDM]/;
  var peg$r13 = /^[0-9a-zA-Z]/;
  var peg$r14 = /^[)\]}]/;
  var peg$r15 = /^[spdfgh]/;
  var peg$r16 = /^[^`]/;
  var peg$r17 = /^[ \t\r\n\f\v]/;

  var peg$e0 = peg$anyExpectation();
  var peg$e1 = peg$literalExpectation("crystal", false);
  var peg$e2 = peg$literalExpectation("[", false);
  var peg$e3 = peg$classExpectation(["]"], true, false);
  var peg$e4 = peg$literalExpectation("]", false);
  var peg$e5 = peg$literalExpectation("(", false);
  var peg$e6 = peg$classExpectation([")"], true, false);
  var peg$e7 = peg$literalExpectation(")", false);
  var peg$e8 = peg$literalExpectation("{", false);
  var peg$e9 = peg$classExpectation(["}"], true, false);
  var peg$e10 = peg$literalExpectation("}", false);
  var peg$e11 = peg$literalExpectation("spectrum", false);
  var peg$e12 = peg$literalExpectation("calc", false);
  var peg$e13 = peg$literalExpectation("zmatrix", false);
  var peg$e14 = peg$literalExpectation("mechanism", false);
  var peg$e15 = peg$literalExpectation("@meta(\"", false);
  var peg$e16 = peg$classExpectation(["\""], true, false);
  var peg$e17 = peg$literalExpectation("\",\"", false);
  var peg$e18 = peg$literalExpectation("\")", false);
  var peg$e19 = peg$literalExpectation("@", false);
  var peg$e20 = peg$literalExpectation("(\"", false);
  var peg$e21 = peg$literalExpectation("name", false);
  var peg$e22 = peg$literalExpectation("title", false);
  var peg$e23 = peg$literalExpectation("formula", false);
  var peg$e24 = peg$literalExpectation("label", false);
  var peg$e25 = peg$literalExpectation("inchi", false);
  var peg$e26 = peg$literalExpectation("smiles", false);
  var peg$e27 = peg$literalExpectation("cas", false);
  var peg$e28 = peg$literalExpectation("iupac", false);
  var peg$e29 = peg$literalExpectation("cid", false);
  var peg$e30 = peg$literalExpectation("chebi", false);
  var peg$e31 = peg$classExpectation([["a", "z"]], false, false);
  var peg$e32 = peg$literalExpectation("+", false);
  var peg$e33 = peg$literalExpectation("<=>", false);
  var peg$e34 = peg$literalExpectation("<->", false);
  var peg$e35 = peg$literalExpectation("->", false);
  var peg$e36 = peg$literalExpectation("<-", false);
  var peg$e37 = peg$literalExpectation("-", false);
  var peg$e38 = peg$literalExpectation("alpha", false);
  var peg$e39 = peg$literalExpectation("beta", false);
  var peg$e40 = peg$classExpectation(["E", ["R", "S"], "Z", ["a", "b"], ["\u03B1", "\u03B2"]], false, false);
  var peg$e41 = peg$literalExpectation("H", false);
  var peg$e42 = peg$literalExpectation("_", false);
  var peg$e43 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e44 = peg$literalExpectation("##", false);
  var peg$e45 = peg$literalExpectation(">-", false);
  var peg$e46 = peg$literalExpectation("-<", false);
  var peg$e47 = peg$literalExpectation("~>", false);
  var peg$e48 = peg$literalExpectation("~~", false);
  var peg$e49 = peg$literalExpectation("#", false);
  var peg$e50 = peg$literalExpectation("=", false);
  var peg$e51 = peg$classExpectation([["A", "Z"]], false, false);
  var peg$e52 = peg$classExpectation(["(", "[", "{"], false, false);
  var peg$e53 = peg$classExpectation(["R", "S"], false, false);
  var peg$e54 = peg$literalExpectation("@m(", false);
  var peg$e55 = peg$literalExpectation("@t(\"", false);
  var peg$e56 = peg$literalExpectation("@(", false);
  var peg$e57 = peg$literalExpectation(",", false);
  var peg$e58 = peg$literalExpectation("@f(", false);
  var peg$e59 = peg$literalExpectation(".", false);
  var peg$e60 = peg$literalExpectation(":", false);
  var peg$e61 = peg$classExpectation([["^", "_"]], false, false);
  var peg$e62 = peg$literalExpectation("^", false);
  var peg$e63 = peg$classExpectation(["+", "-"], false, false);
  var peg$e64 = peg$classExpectation(["I", "V", "X", "L", "C", "D", "M"], false, false);
  var peg$e65 = peg$classExpectation([["0", "9"], ["a", "z"], ["A", "Z"]], false, false);
  var peg$e66 = peg$literalExpectation("\"", false);
  var peg$e67 = peg$classExpectation([")", "]", "}"], false, false);
  var peg$e68 = peg$classExpectation(["s", "p", "d", "f", "g", "h"], false, false);
  var peg$e69 = peg$literalExpectation("`", false);
  var peg$e70 = peg$classExpectation(["`"], true, false);
  var peg$e71 = peg$classExpectation([" ", "\t", "\r", "\n", "\f", "\v"], false, false);

  var peg$f0 = function(nodes) { return { kind: "formula", nodes }; };
  var peg$f1 = function(head, n) { return n; };
  var peg$f2 = function(head, rest) { return [head, ...rest]; };
  var peg$f3 = function(name, params, body) {
      return { kind: "crystal", name, params, body };
    };
  var peg$f4 = function(cs) { return cs.join(""); };
  var peg$f5 = function(cs) { return cs.join(""); };
  var peg$f6 = function(cs) { return cs.join(""); };
  var peg$f7 = function(type, params, body) {
      return { kind: "spectrum", type, params, body };
    };
  var peg$f8 = function(cs) { return cs.join(""); };
  var peg$f9 = function(params, body) {
      return { kind: "calculation", params, body };
    };
  var peg$f10 = function(body) { return { kind: "zmatrix", body }; };
  var peg$f11 = function(body) { return { kind: "mechanism", body }; };
  var peg$f12 = function(molecule, annotations) {
      return { kind: "annotated", molecule, annotations };
    };
  var peg$f13 = function(ann) { return ann; };
  var peg$f14 = function(key, value) {
      return { metaKey: key.join(""), metaValue: value.join("") };
    };
  var peg$f15 = function(type, value) {
      return { annType: type, annValue: value.join("") };
    };
  var peg$f16 = function(first, arrow, products) { return { arrow, products }; };
  var peg$f17 = function(first, tail) {
      return { kind: "cascade", first, tail };
    };
  var peg$f18 = function(reactants, arrow, products) {
      return { kind: "reaction", reactants, arrow, products };
    };
  var peg$f19 = function(head, m) { return m; };
  var peg$f20 = function(head, rest) {
      return [head, ...rest];
    };
  var peg$f21 = function(kind, above, below) {
      return { kind, above, below };
    };
  var peg$f22 = function(text) { return text.join(""); };
  var peg$f23 = function(stereo, coefficient, units) {
      return { kind: "molecule", stereo, coefficient, units };
    };
  var peg$f24 = function(stereo) { return stereo; };
  var peg$f25 = function(lonePairs, subscript, superscript, radicalElectrons, annotations) {
      return {
        kind: "atom", element: "H", isotope: null,
        subscript, superscript,
        lonePairs, radicalElectrons, ringClosures: null,
        ...annotations,
      };
    };
  var peg$f26 = function(value) { return "_" + value; };
  var peg$f27 = function() { return { kind: "bond", bondKind: "quadruple" }; };
  var peg$f28 = function() { return { kind: "bond", bondKind: "wedge" }; };
  var peg$f29 = function() { return { kind: "bond", bondKind: "hash" }; };
  var peg$f30 = function() { return { kind: "bond", bondKind: "dative" }; };
  var peg$f31 = function() { return { kind: "bond", bondKind: "wavy" }; };
  var peg$f32 = function() { return { kind: "bond", bondKind: "triple" }; };
  var peg$f33 = function() { return { kind: "bond", bondKind: "double" }; };
  var peg$f34 = function() { return { kind: "bond", bondKind: "single" }; };
  var peg$f35 = function(digits) { return digits; };
  var peg$f36 = function(lonePairs, isotope, element, suffix, radicalElectrons, ringClosures, annotations) {
      return {
        kind: "atom", element, isotope, ...suffix,
        lonePairs, radicalElectrons, ringClosures, ...annotations,
      };
    };
  var peg$f37 = function(lonePairs, element, suffix, radicalElectrons, ringClosures, annotations) {
      return {
        kind: "atom", element, isotope: null, ...suffix,
        lonePairs, radicalElectrons, ringClosures, ...annotations,
      };
    };
  var peg$f38 = function(coordinate, parity, multiplicity, title, fractional) {
      return {
        x2: coordinate?.x2, y2: coordinate?.y2, z2: coordinate?.z2,
        atomParity: parity, spinMultiplicity: multiplicity,
        atomTitle: title,
        xFract: fractional?.x, yFract: fractional?.y, zFract: fractional?.z,
      };
    };
  var peg$f39 = function(parity) { return parity; };
  var peg$f40 = function(digits) { return digits; };
  var peg$f41 = function(title) { return title.join(""); };
  var peg$f42 = function(x, y, zz) { return zz; };
  var peg$f43 = function(x, y, z) {
      return { x2: x, y2: y, z2: z };
    };
  var peg$f44 = function(x, y, z) {
      return { x, y, z };
    };
  var peg$f45 = function(subscript, superscript) {
      return { subscript, superscript };
    };
  var peg$f46 = function(marker, digits) { return marker + digits; };
  var peg$f47 = function(value) { return "_" + value; };
  var peg$f48 = function(value) { return "^" + value; };
  var peg$f49 = function(digits, sign) { return digits + sign; };
  var peg$f50 = function(sign, digits) { return sign + digits; };
  var peg$f51 = function(numerals) { return "(" + numerals + ")"; };
  var peg$f52 = function(content) { return "{" + content.join("") + "}"; };
  var peg$f53 = function(open, nodes, _close, multiplicity) {
      return { kind: "group", open, nodes, multiplicity };
    };
  var peg$f54 = function(content) { return { kind: "text", content: content.join("") }; };
  var peg$f55 = function(digits) { return digits; };
  var peg$f56 = function(head, second, rest) {
      return { kind: "electron-config", pairs: [head, second, ...rest] };
    };
  var peg$f57 = function(orbital, occupancy) { return [orbital, occupancy]; };
  var peg$f58 = function(source) { return { kind: "math", source: source.join("") }; };
  var peg$f59 = function(content) { return { kind: "text", content: content.join("") }; };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseFormula() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseNodes();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$currPos;
      peg$silentFails++;
      if (input.length > peg$currPos) {
        s5 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      peg$silentFails--;
      if (s5 === peg$FAILED) {
        s4 = undefined;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      if (s4 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f0(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseNodes() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseNode();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      s5 = peg$parseNode();
      if (s5 !== peg$FAILED) {
        peg$savedPos = s3;
        s3 = peg$f1(s1, s5);
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        s5 = peg$parseNode();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s3 = peg$f1(s1, s5);
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      peg$savedPos = s0;
      s0 = peg$f2(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseNode() {
    var s0;
